k8s-manifests/db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose --file docker-stack.yml convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/backend: "true"
    io.kompose.service: db
  name: db
spec:
  nodeSelector:
    nodetype: database
  containers:
    - env:
        - name: CABLE_REDIS_SERVER_URL
          valueFrom:
            configMapKeyRef:
              key: CABLE_REDIS_SERVER_URL
              name: env-dev-docker-compose
        - name: DATABASE_NAME
          valueFrom:
            configMapKeyRef:
              key: DATABASE_NAME
              name: env-dev-docker-compose
        - name: DATABASE_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: DATABASE_PASSWORD
              name: env-dev-docker-compose
        - name: DATABASE_PORT
          valueFrom:
            configMapKeyRef:
              key: DATABASE_PORT
              name: env-dev-docker-compose
        - name: DATABASE_URL
          valueFrom:
            configMapKeyRef:
              key: DATABASE_URL
              name: env-dev-docker-compose
        - name: DATABASE_USERNAME
          valueFrom:
            configMapKeyRef:
              key: DATABASE_USERNAME
              name: env-dev-docker-compose
        - name: POSTGRES_DB
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_DB
              name: env-dev-docker-compose
        - name: POSTGRES_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_PASSWORD
              name: env-dev-docker-compose
        - name: POSTGRES_USER
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_USER
              name: env-dev-docker-compose
        - name: RAILS_SERVE_STATIC_FILES
          valueFrom:
            configMapKeyRef:
              key: RAILS_SERVE_STATIC_FILES
              name: env-dev-docker-compose
        - name: REDIS_CLIENT_URL
          valueFrom:
            configMapKeyRef:
              key: REDIS_CLIENT_URL
              name: env-dev-docker-compose
        - name: REDIS_SERVER_URL
          valueFrom:
            configMapKeyRef:
              key: REDIS_SERVER_URL
              name: env-dev-docker-compose
        - name: WEB_LOGO_URL
          valueFrom:
            configMapKeyRef:
              key: WEB_LOGO_URL
              name: env-dev-docker-compose
        - name: WEB_TITLE
          valueFrom:
            configMapKeyRef:
              key: WEB_TITLE
              name: env-dev-docker-compose
      image: postgres:10.10
      name: db
      ports:
        - containerPort: 5432
      resources: {}
      volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-data
          subPath: postgres
  restartPolicy: OnFailure
  volumes:
    - name: db-data
      persistentVolumeClaim:
        claimName: db-data
status: {}
