k8s-manifests/sidekiq-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq-deployment
  labels:
    app: sidekiq
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sidekiq
  template:
    metadata:
      labels:
        app: sidekiq
    spec:
      containers:
        - name: sidekiq
          image: x1wins/cw-ovp
          imagePullPolicy: Always
          args:
            - bundle
            - exec
            - sidekiq
            - -c
            - "1"
          volumeMounts:
            - mountPath: /storage
              name: local-storage
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - sidekiq
              topologyKey: "kubernetes.io/hostname"
      volumes:
        - name: local-storage
          emptyDir: {}
