k8s-manifests/sidekiq-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose --file docker-stack.yml convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/backend: "true"
    io.kompose.service: sidekiq
  name: sidekiq
spec:
  containers:
    - args:
        - bundle
        - exec
        - sidekiq
        - -c
        - "2"
      image: x1wins/cw-ovp
      name: sidekiq
      resources: {}
      volumeMounts:
        - mountPath: /storage
          name: local-storage
  restartPolicy: OnFailure
  volumes:
    - name: local-storage
      persistentVolumeClaim:
        claimName: local-storage
status: {}
