k8s-manifests/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: x1wins/cw-ovp
          imagePullPolicy: Always
          args:
            - bash
            - -c
            - rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'
          ports:
            - containerPort: 3000
          resources: {}
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - web
              topologyKey: "kubernetes.io/hostname"
