k8s-manifests/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose --file docker-stack.yml convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/backend: "true"
    io.kompose.service: web
  name: web
spec:
  containers:
    - args:
        - bash
        - -c
        - rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'
      image: x1wins/cw-ovp
      name: web
      ports:
        - containerPort: 3000
      resources: {}
  restartPolicy: OnFailure
status: {}
